# single-shot-eval

./: .gitignore  .pmat-gates.toml  .pmat-metrics.toml  CLAUDE.md  Cargo.toml  Makefile  README.md  deny.toml
.github/workflows/: ci.yml  deploy-docs.yml
benches/: pareto.rs
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/api-reference/: config.md  corpus.md  pareto.md  report.md  runner.md
book/src/appendix/: changelog.md  references.md
book/src/architecture/: batuta-stack.md  overview.md  pareto-analysis.md
book/src/examples/: basic-evaluation.md  custom-baselines.md  py2rs-benchmark.md
book/src/getting-started/: cli-usage.md  installation.md  quick-start.md
data/: sst2-sample.jsonl
data/corpus/: transpile_corpus.jsonl
docs/qa/: 100-point-qa-checklist-red-team-mode.md  100point-popper-nullification-qa.md  scientific-reproducibility-reporting-100point-qa-checklist.md
docs/roadmaps/: roadmap.yaml
docs/specifications/: download-convert-test-spec.md  eval-spec.md
examples/: benchmark.rs  demo.rs  download_convert_test.rs
experiments/python-to-rust/: run_experiment.sh
models/: .gitkeep  test-models.yaml
prompts/: validation-prompts.yaml
reports/: .gitkeep
scripts/: bench-update-readme.sh
src/: baselines.rs  bench_bridge.rs  compiler.rs  config.rs  convert.rs  corpus.rs  download.rs  inference.rs  lib.rs  main.rs  metrics.rs  pareto.rs  report.rs  runner.rs  sovereign.rs  validate.rs
tasks/: code-completion.yaml  python-to-rust.yaml  qa-triviaqa.yaml  sentiment.yaml
tests/: batuta_stack.rs  download_convert_test.rs  integration.rs
